// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DisplayCurrency > renders inside of model context 1`] = `
<DocumentFragment>
  <div
    class="input-group"
  >
    <span
      class="input-group-text"
    >
      $
    </span>
    <input
      aria-invalid="false"
      autocomplete="off"
      class="form-control"
      id="dummy"
      name="dummy"
      path="dummy"
      readonly=""
      type="text"
      value="-"
    />
  </div>
</DocumentFragment>
`;

exports[`DisplayCurrency > should render the empty text when value is nullish 1`] = `
<DocumentFragment>
  <div
    class="input-group"
  >
    <span
      class="input-group-text"
    >
      $
    </span>
    <input
      aria-invalid="false"
      autocomplete="off"
      class="form-control"
      id="dummy"
      name="dummy"
      path="dummy"
      readonly=""
      type="text"
      value="-"
    />
  </div>
</DocumentFragment>
`;

exports[`DisplayCurrency > should render the overridden empty text when value is nullish 1`] = `
<DocumentFragment>
  <div
    class="input-group"
  >
    <span
      class="input-group-text"
    >
      $
    </span>
    <input
      aria-invalid="false"
      autocomplete="off"
      class="form-control"
      id="dummy"
      name="dummy"
      path="dummy"
      readonly=""
      type="text"
      value="baz"
    />
  </div>
</DocumentFragment>
`;

exports[`DisplayCurrency > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
